CSP form. Initial checkin

--- a/index-fr.html
+++ b/index-fr.html
@@ -172,29 +172,29 @@
             </div>
 
         </div>
-        <div>
-            <row>
-                <h2>Summary of changes</h2>
-                <ul>
-                    <li>Added File naming conventions</li>
-                    <li>Activity Form External: added Help page links (demo)</li>
-                    <li>Fixes to amendment behavior (company and Activity)</li>
-                    <li>Fix to xml generation, internal Activity Form </li>
-                    <li>Company Form: Fix to duplicate role Validation </li>
-                    <li>Company Form: Fix to country validation visibility behaviour</li>
-                </ul>
-            </row>
-        </div>
+
+        <!--<div>
+            <div class="row">
+                <h1 property="name" id="wb-cont">Certificat de protection supplémentaire</h1>
+            </div>
+            <div>
+                <div class="row">
+                    <h2>Internal User (i.e. HPFB) Links</h2>
+                </div>
+                <div class="row">
+                    <a href="./csp-cps/formulaire-certificat-protection-supplementaire-internal.html">Formulaire de la demande de certificat de protection supplémentaire (CPS) (June 8,2017) </a>
+                </div>
+            </div>
+        </div>-->
+
 
     </div>
     <!--content ends here -->
 
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <dl id="wb-dtmd">
-            <dt>Date de modification&#160;:&#32;</dt>
-            <dd>
-                <time property="dateModified"><!--build:dateToday--><!--endbuild--> </time>
-            </dd>
+            <dt>Date de modification:June 8, 2017</dt>
+
         </dl>
     </div>
     </div>
