--- a/index.html
+++ b/index.html
@@ -165,11 +165,27 @@
             </div>
         </div>
     </div>
+<!--    <div>
+        <div class="row">
+            <h1 property="name" id="wb-cont">Certificate of Supplementary Protection</h1>
+        </div>
+        <div>
+            <div class="row">
+                <h2>Internal User (i.e. HPFB) Links</h2>
+            </div>
+            <div class="row">
+                <a href="./csp-cps/certificate-supplementary-protection-form-internal.html">Certificate of Supplementary Protection -Internal (Deployed June 8,2017) </a>
+            </div>
+        </div>
+    </div>-->
+
+
+
     <!--content ends here -->
 
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <dl id="wb-dtmd">
-            <dt>Date modified: April 12, 2017</dt>
+            <dt>Date modified: June 8, 2017</dt>
         </dl>
     </div>
     </div>
