--- a/index-fr.html
+++ b/index-fr.html
@@ -173,7 +173,7 @@
 
         </div>
 
-        <!--<div>
+        <div>
             <div class="row">
                 <h1 property="name" id="wb-cont">Certificat de protection supplémentaire</h1>
             </div>
@@ -185,7 +185,7 @@
                     <a href="./csp-cps/formulaire-certificat-protection-supplementaire-internal.html">Formulaire de la demande de certificat de protection supplémentaire (CPS) (June 8,2017) </a>
                 </div>
             </div>
-        </div>-->
+        </div>
 
 
     </div>
