--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             </div>
         </div>
     </div>
-<!--    <div>
+    <div>
         <div class="row">
             <h1 property="name" id="wb-cont">Certificate of Supplementary Protection</h1>
         </div>
@@ -174,10 +174,10 @@
                 <h2>Internal User (i.e. HPFB) Links</h2>
             </div>
             <div class="row">
-                <a href="./csp-cps/certificate-supplementary-protection-form-internal.html">Certificate of Supplementary Protection -Internal (Deployed June 8,2017) </a>
+                <a href="./csp-cps/certificate-supplementary-protection-form-internal.html">Certificate of Supplementary Protection -Internal (June 8, 2017) </a>
             </div>
         </div>
-    </div>-->
+    </div>
 
 
 
