--- a/transaction/transactionEXT-en.html
+++ b/transaction/transactionEXT-en.html
@@ -91,7 +91,8 @@
     var defTop=document.getElementById("def-top");
     defTop.outerHTML=wet.builder.top({
         cdnEnv:"prod",
-        breadcrumbs: [{title: "Home", href: "https://lam-dev.hres.ca/REP-Form/index.html"}]
+        breadcrumbs: [{title: "Home", href: "https://lam-dev.hres.ca/rep_test/index.html"}]
+
     })
 </script>
 <main role="main" property="mainContentOfPage" class="container">
@@ -119,7 +120,7 @@
         var defPreFooter=document.getElementById("def-preFooter");
         defPreFooter.outerHTML=wet.builder.preFooter({
             cdnEnv:"prod",
-            dateModified:"2017-06-30",
+            dateModified:"2017-07-17",
             showShare:false,
             showFeedback:false
         })
@@ -163,7 +164,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/transactionAppEXT-en_20170630_1649.min.js"></script>
+<script src="app/scripts/transactionAppEXT-en_20170717_1522.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
