--- a/transaction/transactionEXT-en.html
+++ b/transaction/transactionEXT-en.html
@@ -91,12 +91,7 @@
     var defTop=document.getElementById("def-top");
     defTop.outerHTML=wet.builder.top({
         cdnEnv:"prod",
-        breadcrumbs: [{title: "Home", href: "https://lam-dev.hres.ca/REP-Form/index.html"}],
-        lngLinks:[{
-           lang:"fr",
-            href:"",
-            text:"Français"
-        }]
+        breadcrumbs: [{title: "Home", href: "https://lam-dev.hres.ca/REP-Form/index.html"}]
     })
 </script>
 <main role="main" property="mainContentOfPage" class="container">
@@ -124,7 +119,7 @@
         var defPreFooter=document.getElementById("def-preFooter");
         defPreFooter.outerHTML=wet.builder.preFooter({
             cdnEnv:"prod",
-            dateModified:"2017-07-20",
+            dateModified:"2017-07-21",
             showShare:false,
             showFeedback:false
         })
@@ -168,7 +163,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/transactionAppEXT-en_20170720_1414.min.js"></script>
+<script src="app/scripts/transactionAppEXT-en_20170721_1037.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
