--- a/transaction/transactionEXT-en.html
+++ b/transaction/transactionEXT-en.html
@@ -91,7 +91,12 @@
     var defTop=document.getElementById("def-top");
     defTop.outerHTML=wet.builder.top({
         cdnEnv:"prod",
-        breadcrumbs: [{title: "Home", href: "https://lam-dev.hres.ca/REP-Form/index.html"}]
+        breadcrumbs: [{title: "Home", href: "https://lam-dev.hres.ca/REP-Form/index.html"}],
+        lngLinks:[{
+           lang:"fr",
+            href:"",
+            text:"Français"
+        }]
     })
 </script>
 <main role="main" property="mainContentOfPage" class="container">
@@ -163,7 +168,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/transactionAppEXT-en_20170726_1005.min.js"></script>
+<script src="app/scripts/transactionAppEXT-en_20170726_1230.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
