Updated activity form so that there is no cache

--- a/activity/activityEXT-en.html
+++ b/activity/activityEXT-en.html
@@ -91,8 +91,8 @@
     var defTop=document.getElementById("def-top");
     defTop.outerHTML=wet.builder.top({
         cdnEnv:"prod",
-        breadcrumbs: [{title: "Home", href: "https://lam-dev.hres.ca/REP-Form/index.html"}],
-          })
+        breadcrumbs: [{title: "Home", href: "https://lam-dev.hres.ca/REP-Form/index.html"}]
+    })
 </script>
 <main role="main" property="mainContentOfPage" class="container">
 
@@ -119,7 +119,7 @@
         var defPreFooter=document.getElementById("def-preFooter");
         defPreFooter.outerHTML=wet.builder.preFooter({
             cdnEnv:"prod",
-            dateModified:"2017-07-20",
+            dateModified:"2017-07-26",
             showShare:false,
             showFeedback:false
         })
@@ -163,7 +163,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/activityAppEXT-en_20170720_1412.min.js"></script>
+<script src="app/scripts/activityAppEXT-en_20170726_1253.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
