--- a/transaction/transactionEXT-en.html
+++ b/transaction/transactionEXT-en.html
@@ -3,6 +3,7 @@
 <html class="no-js" lang="en" dir="ltr">
 <!--<![endif]-->
 <head>
+
     <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/rn/cdts/compiled/wet-en.js"></script>
     <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/rn/cdts/compiled/soyutils.js"></script>
     <script type="text/javascript">
@@ -19,7 +20,7 @@
     <!--No cache-->
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
     <meta http-equiv="Pragma" content="no-cache"/>
-    <meta http-equiv="Expires" content="0"/>
+    <meta http-equiv="Expires" content="-1"/>
     <title>Health Canada Transaction template</title>
     <meta content="width=device-width,initial-scale=1" name="viewport">
     <!-- Meta data -->
@@ -90,7 +91,12 @@
     var defTop=document.getElementById("def-top");
     defTop.outerHTML=wet.builder.top({
         cdnEnv:"prod",
-        breadcrumbs: [{title: "Home", href: "https://lam-dev.hres.ca/REP-Form/index.html"}]
+        breadcrumbs: [{title: "Home", href: "https://lam-dev.hres.ca/REP-Form/index.html"}],
+        lngLinks:[{
+           lang:"fr",
+            href:"",
+            text:"Français"
+        }]
     })
 </script>
 <main role="main" property="mainContentOfPage" class="container">
@@ -118,7 +124,7 @@
         var defPreFooter=document.getElementById("def-preFooter");
         defPreFooter.outerHTML=wet.builder.preFooter({
             cdnEnv:"prod",
-            dateModified:"2017-06-01",
+            dateModified:"2017-07-26",
             showShare:false,
             showFeedback:false
         })
@@ -162,7 +168,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/transactionAppEXT-en_20170601_1511.min.js"></script>
+<script src="app/scripts/transactionAppEXT-en_20170726_1230.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
