--- a/index.html
+++ b/index.html
@@ -66,9 +66,8 @@
 
             <div class="row">
                 <div class="col-md-12">
-                    <!--<ul class="list-inline margin-bottom-none">
-                    <li><a lang="fr" href="content-fr.html">Français</a></li>
-                    </ul>-->
+
+
                 </div>
             </div>
         </section>
@@ -169,7 +168,8 @@
                         <a href="./company/companyEnrolEXT-en.html">Company Enrolment -External (May 3)</a>
                     </div>
                     <div class="row">
-                        <a href="./transaction/transactionEXT-en.html">Transaction Enrolment -External (Aug 14, 2017)</a>
+                        <a href="./transaction/transactionEXT-en.html">Transaction Enrolment -External (Aug 14,
+                            2017)</a>
                     </div>
                     <div class="row">
                         <a href="./activity/activityEnrolEXT-en.html">Activity Enrolment -External (March 17)</a>
@@ -213,6 +213,7 @@
                 </dl>
             </div>
         </div>
+    </div>
 </main>
 <aside class="gc-nttvs container">
     <h2>Government of Canada activities and initiatives</h2>
