Text changes based on Aug 2 email.

--- a/csp-cps/formulaire-certificat-protection-supplementaire.html
+++ b/csp-cps/formulaire-certificat-protection-supplementaire.html
@@ -85,6 +85,7 @@
     var defTop=document.getElementById("def-top");
     defTop.outerHTML=wet.builder.top({
         cdnEnv:"prod",
+        breadcrumbs: [{title: "Accueil", href: "https://lam-dev.hres.ca/REP-Form/index-fr.html"}],
         lngLinks:[{
             lang:"en",
             href:"certificate-supplementary-protection-form.html",
@@ -116,7 +117,7 @@
         var defPreFooter=document.getElementById("def-preFooter");
         defPreFooter.outerHTML=wet.builder.preFooter({
             cdnEnv:"prod",
-            dateModified:"2017-06-26",
+            dateModified:"2017-08-14",
             showShare:false,
             showFeedback:false
         })
@@ -157,7 +158,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/cspAppEXT-fr_20170626_1023.min.js"></script>
+<script src="app/scripts/cspAppEXT-fr_20170814_1423.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
