--- a/csp-cps/certificate-supplementary-protection-form-internal.html
+++ b/csp-cps/certificate-supplementary-protection-form-internal.html
@@ -91,7 +91,7 @@
     var defTop=document.getElementById("def-top");
     defTop.outerHTML=wet.builder.top({
         cdnEnv:"prod",
-        breadcrumbs: [{title: "Home", href: "https://lam-dev.hres.ca/REP-Form-Internal/index.html"}],
+        breadcrumbs: [{title: "Home", href: "https://lam-dev.hres.ca/REP-Form/index.html"}],
         lngLinks:[{
            lang:"fr",
             href:"formulaire-certificat-protection-supplementaire-internal.html",
@@ -126,7 +126,7 @@
         var defPreFooter=document.getElementById("def-preFooter");
         defPreFooter.outerHTML=wet.builder.preFooter({
             cdnEnv:"prod",
-            dateModified:"2017-06-26",
+            dateModified:"2017-08-14",
             showShare:false,
             showFeedback:false
         })
@@ -170,7 +170,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/cspAppINT-en_20170626_1023.min.js"></script>
+<script src="app/scripts/cspAppINT-en_20170814_1423.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
