--- a/csp-cps/formulaire-certificat-protection-supplementaire-internal.html
+++ b/csp-cps/formulaire-certificat-protection-supplementaire-internal.html
@@ -85,7 +85,7 @@
     var defTop=document.getElementById("def-top");
     defTop.outerHTML=wet.builder.top({
         cdnEnv:"prod",
-        breadcrumbs: [{title: "Accueil", href: "https://lam-dev.hres.ca/REP-Form/index-fr.html"}],
+        breadcrumbs: [{title: "Accueil", href: "https://lam-dev.hres.ca/REP-Form-Internal/index-fr.html"}],
         lngLinks:[{
             lang:"en",
             href:"certificate-supplementary-protection-form-internal.html",
@@ -117,7 +117,7 @@
         var defPreFooter=document.getElementById("def-preFooter");
         defPreFooter.outerHTML=wet.builder.preFooter({
             cdnEnv:"prod",
-            dateModified:"2017-09-20",
+            dateModified:"2017-09-25",
             showShare:false,
             showFeedback:false
         })
@@ -158,7 +158,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/cspAppINT-fr_20170920_1534.min.js"></script>
+<script src="app/scripts/cspAppINT-fr_20170925_1018.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
