--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                         <h2> External User Links</h2>
                     </div>
                     <div class="row">
-                        <a href="./company/companyEnrolEXT-en.html">Company Enrolment -External (Nov 2)</a>
+                        <a href="./company/companyEXT-en.html">Company Enrolment -External (Nov 6)</a>
                     </div>
                     <div class="row">
                         <a href="./transaction/transactionEXT-en.html">Transaction Enrolment -External (Nov 2)</a>
@@ -185,7 +185,7 @@
                         <h2>Internal User (i.e. HPFB) Links</h2>
                     </div>
                     <div class="row">
-                        <a href="./company/companyEnrolINT-en.html">Company Enrolment -Internal (Nov 2) </a>
+                        <a href="./company/companyINT-en.html">Company Enrolment -Internal (Nov 6) </a>
                     </div>
 
                     <div class="row">
@@ -211,7 +211,7 @@
 
             <div class="datemod col-xs-12 mrgn-tp-lg">
                 <dl id="wb-dtmd">
-                    <dt>Date modified:Sept 21, 2017</dt>
+                    <dt>Date modified:Nov 6, 2017</dt>
                 </dl>
             </div>
         </div>
