Typo in binding for transaction

--- a/transaction/transactionEXT-fr.html
+++ b/transaction/transactionEXT-fr.html
@@ -29,12 +29,12 @@
     <!-- Meta data-->
     <!--[if gte IE 9 | !IE ]><!-->
     <link href="./../GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon">
-    <link rel="stylesheet" href="./../GCWeb/css/theme.min.css" media="none">
+    <link rel="stylesheet" href="./../GCWeb/css/theme.min.css">
     <!--<![endif]-->
     <!--[if lt IE 9]>
     <link href="./../GCWeb/assets/favicon.ico" rel="shortcut icon"/>
 
-    <link rel="stylesheet" href="./../GCWeb/css/ie8-theme.min.css" media="none"/>
+    <link rel="stylesheet" href="./../GCWeb/css/ie8-theme.min.css"/>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="./../wet-boew/js/ie8-wet-boew.min.js"></script>
     <![endif]-->
@@ -42,7 +42,7 @@
 
 
     <![endif]-->
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet" media="none">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <!--<link rel="stylesheet" href="./app/styles/rep.css ">-->
     <!-- inject:css -->
     <link rel="stylesheet" href="app/styles/rep.css">
@@ -50,7 +50,7 @@
     <link rel="stylesheet" href="app/styles/select2.min.css">
     <!-- endinject -->
     <noscript>
-        <link rel="stylesheet" href="./../wet-boew/css/noscript.min.css" media="none"/>
+        <link rel="stylesheet" href="./../wet-boew/css/noscript.min.css"/>
     </noscript>
     <!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
     <script>dataLayer1 = [];</script>
@@ -115,7 +115,7 @@
         var defPreFooter=document.getElementById("def-preFooter");
         defPreFooter.outerHTML=wet.builder.preFooter({
             cdnEnv:"prod",
-            dateModified:"2017-11-09",
+            dateModified:"2017-11-27",
             showShare:false,
             showFeedback:false
         })
@@ -156,7 +156,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/transactionAppEXT-fr_20171109_1614.min.js"></script>
+<script src="app/scripts/transactionAppEXT-fr_20171127_1219.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
