--- a/transaction/transactionEXT-en.html
+++ b/transaction/transactionEXT-en.html
@@ -29,12 +29,12 @@
     <!-- Meta data-->
     <!--[if gte IE 9 | !IE ]><!-->
     <link href="./../GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon">
-    <link rel="stylesheet" href="./../GCWeb/css/theme.min.css" media="none">
+    <link rel="stylesheet" href="./../GCWeb/css/theme.min.css">
     <!--<![endif]-->
     <!--[if lt IE 9]>
     <link href="./../GCWeb/assets/favicon.ico" rel="shortcut icon"/>
 
-    <link rel="stylesheet" href="./../GCWeb/css/ie8-theme.min.css" media="none"/>
+    <link rel="stylesheet" href="./../GCWeb/css/ie8-theme.min.css"/>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="./../wet-boew/js/ie8-wet-boew.min.js"></script>
 
@@ -47,7 +47,7 @@
 
 
     <![endif]-->
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet" media="none">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
     <!-- inject:css -->
     <link rel="stylesheet" href="app/styles/rep.css">
@@ -124,7 +124,7 @@
         var defPreFooter=document.getElementById("def-preFooter");
         defPreFooter.outerHTML=wet.builder.preFooter({
             cdnEnv:"prod",
-            dateModified:"2017-11-09",
+            dateModified:"2017-11-27",
             showShare:false,
             showFeedback:false
         })
@@ -151,7 +151,7 @@
 <script src="./../wet-boew/js/ie8-wet-boew2.min.js"></script>
 
 <![endif]-->
-<script src="./../GCWeb/js/theme.min.js" media="none"></script>
+<script src="./../GCWeb/js/theme.min.js"></script>
 <!--Start add custom scripts here-->
 
 <!-- inject:js -->
@@ -168,7 +168,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/transactionAppEXT-en_20171109_1614.min.js"></script>
+<script src="app/scripts/transactionAppEXT-en_20171127_1219.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
