Change the naming convention for Company

--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
         </div>
         <div>
             <div class="row">
-                <h2>REP Form Links (Last updated: Oct 26, 2017)</h2>
+                <h2>REP Form Links (Last updated: Nov 27, 2017)</h2>
             </div>
             <div class="row">
                 <div class="col-md-12 form-group">
-                    <a href="companyEXT-en.html">Company Enrolment</a>
+                    <a href="./company/companyEXT-en.html">Company Enrolment</a>
                 </div>
             </div>
             <div class="row">
@@ -181,7 +181,7 @@
     <div class="row">
         <div class="datemod col-xs-12 mrgn-tp-lg">
             <dl id="wb-dtmd">
-                <dt>Date modified: Oct 26, 2017</dt>
+                <dt>Date modified: Nov 27, 2017</dt>
             </dl>
         </div>
     </div>
