fax number update to required field

--- a/company/companyINT-en.html
+++ b/company/companyINT-en.html
@@ -91,12 +91,12 @@
     var defTop=document.getElementById("def-top");
     defTop.outerHTML=wet.builder.top({
         cdnEnv:"prod",
-        breadcrumbs: [{title: "Home", href: "https://lam-dev.hres.ca/REP-Form-Internal/index.html"}]
-       /* lngLinks:[{
+        breadcrumbs: [{title: "Home", href: "https://lam-dev.hres.ca/REP-Form-Internal/index.html"}],
+        lngLinks:[{
            lang:"fr",
             href:"",
             text:"Français"
-        }]*/
+        }]
     })
 </script>
 <main role="main" property="mainContentOfPage" class="container">
@@ -124,7 +124,7 @@
         var defPreFooter=document.getElementById("def-preFooter");
         defPreFooter.outerHTML=wet.builder.preFooter({
             cdnEnv:"prod",
-            dateModified:"2017-11-03",
+            dateModified:"2017-12-01",
             showShare:false,
             showFeedback:false
         })
@@ -168,7 +168,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/companyAppINT-en_20171103_1210.min.js"></script>
+<script src="app/scripts/companyAppINT-en_20171201_0916.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
