--- a/company/companyEXT-en.html
+++ b/company/companyEXT-en.html
@@ -91,7 +91,12 @@
     var defTop=document.getElementById("def-top");
     defTop.outerHTML=wet.builder.top({
         cdnEnv:"prod",
-        breadcrumbs: [{title: "Home", href: "https://lam-dev.hres.ca/REP-Form/index.html"}]
+        breadcrumbs: [{title: "Home", href: "https://lam-dev.hres.ca/REP-Form/index.html"}],
+        lngLinks:[{
+           lang:"fr",
+            href:"",
+            text:"Français"
+        }]
     })
 </script>
 <main role="main" property="mainContentOfPage" class="container">
@@ -163,7 +168,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/companyAppEXT-en_20171201_0916.min.js"></script>
+<script src="app/scripts/companyAppEXT-en_20171201_1603.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
