--- a/company/companyEXT-en.html
+++ b/company/companyEXT-en.html
@@ -91,12 +91,7 @@
     var defTop=document.getElementById("def-top");
     defTop.outerHTML=wet.builder.top({
         cdnEnv:"prod",
-        breadcrumbs: [{title: "Home", href: "https://lam-dev.hres.ca/REP-Form/index.html"}],
-        lngLinks:[{
-           lang:"fr",
-            href:"",
-            text:"Français"
-        }]
+        breadcrumbs: [{title: "Home", href: "https://lam-dev.hres.ca/REP-Form/index.html"}]
     })
 </script>
 <main role="main" property="mainContentOfPage" class="container">
@@ -124,7 +119,7 @@
         var defPreFooter=document.getElementById("def-preFooter");
         defPreFooter.outerHTML=wet.builder.preFooter({
             cdnEnv:"prod",
-            dateModified:"2017-12-01",
+            dateModified:"2017-12-13",
             showShare:false,
             showFeedback:false
         })
@@ -168,7 +163,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/companyAppEXT-en_20171201_1603.min.js"></script>
+<script src="app/scripts/companyAppEXT-en_20171213_1331.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
