--- a/transaction/transactionEXT-en.html
+++ b/transaction/transactionEXT-en.html
@@ -91,8 +91,7 @@
     var defTop=document.getElementById("def-top");
     defTop.outerHTML=wet.builder.top({
         cdnEnv:"prod",
-        breadcrumbs: [{title: "Home", href: "https://lam-dev.hres.ca/REP-Form/index.html"}],
-
+        breadcrumbs: [{title: "Home", href: "https://lam-dev.hres.ca/REP-Form/index.html"}]
     })
 </script>
 <main role="main" property="mainContentOfPage" class="container">
@@ -120,7 +119,7 @@
         var defPreFooter=document.getElementById("def-preFooter");
         defPreFooter.outerHTML=wet.builder.preFooter({
             cdnEnv:"prod",
-            dateModified:"2017-10-26",
+            dateModified:"2017-12-13",
             showShare:false,
             showFeedback:false
         })
@@ -164,7 +163,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/transactionAppEXT-en_20171026_0909.min.js"></script>
+<script src="app/scripts/transactionAppEXT-en_20171213_1331.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
