--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                         <a href="./activity/activityEXT-en.html">Activity Enrolment -External (Nov 2, 2017)</a>
                     </div>
                     <div class="row">
-                        <a href="./dossier/dossierEnrolEXT-en.html">Dossier Enrolment External (Jan 16, 2018)</a>
+                        <a href="./dossier/dossierEXT-en.html">Dossier Enrolment External (Jan 16, 2018)</a>
                     </div>
                     <div class="row">
                         <a href="./drugProduct/drugProductEnrolEXT-en.html">Drug Product Enrolment External (Oct 27, 2017)</a>
@@ -192,7 +192,7 @@
                         <a href="./activity/activityINT-en.html">Activity Enrolment -Internal (Nov 2, 2017)</a>
                     </div>
                     <div class="row">
-                        <a href="./dossier/dossierEnrolINT-en.html">Dossier Enrolment Internal (Jan 16, 2018)</a>
+                        <a href="./dossier/dossierINT-en.html">Dossier Enrolment Internal (Jan 16, 2018)</a>
                     </div>
                 </div>
 
