--- a/drugProduct/drugProductEXT-en.html
+++ b/drugProduct/drugProductEXT-en.html
@@ -21,7 +21,7 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
     <meta http-equiv="Pragma" content="no-cache"/>
     <meta http-equiv="Expires" content="-1"/>
-    <title>Health Canada Drug Product Template</title>
+    <title>Health Canada Product Information Template</title>
     <meta content="width=device-width,initial-scale=1" name="viewport">
     <!-- Meta data -->
     <meta name="description"
@@ -103,7 +103,7 @@
 
     <!--content starts here -->
     <div>
-        <h1 property="name" id="wb-cont">Drug Product Template: Regulatory Enrolment Process (REP)</h1>
+        <h1 property="name" id="wb-cont">Product Information Template: Regulatory Enrolment Process (REP)</h1>
         <noscript>
             <h2>JavaScript is required to complete this form</h2>
         </noscript>
@@ -125,7 +125,7 @@
         var defPreFooter=document.getElementById("def-preFooter");
         defPreFooter.outerHTML=wet.builder.preFooter({
             cdnEnv:"prod",
-            dateModified:"2018-02-12",
+            dateModified:"2018-03-08",
             showShare:false,
             showFeedback:false
         })
@@ -169,7 +169,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/drugProductAppEXT-en_20180212_0927.min.js"></script>
+<script src="app/scripts/drugProductAppEXT-en_20180308_1045.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
