--- a/drugProduct/drugProductEXT-fr.html
+++ b/drugProduct/drugProductEXT-fr.html
@@ -22,7 +22,7 @@
     <meta http-equiv="Pragma" content="no-cache"/>
     <meta http-equiv="Expires" content="-1"/>
 
-    <title>fr_Health Canada Drug Product Template</title>
+    <title>fr_Health Canada Product Information Template</title>
     <meta content="width=device-width,initial-scale=1" name="viewport">
     <!-- Meta data -->
     <meta name="description" content="REP Forms">
@@ -97,7 +97,7 @@
 
     <!--content starts here -->
     <div>
-        <h1 property="name" id="wb-cont">fr_Drug Product Template: Regulatory Enrolment Process (REP)</h1>
+        <h1 property="name" id="wb-cont">fr_Product Information Template: Regulatory Enrolment Process (REP)</h1>
         <noscript>
             <h2>JavaScript doit être activé pour remplir ce formulaire</h2>
         </noscript>
@@ -116,7 +116,7 @@
         var defPreFooter=document.getElementById("def-preFooter");
         defPreFooter.outerHTML=wet.builder.preFooter({
             cdnEnv:"prod",
-            dateModified:"2018-02-12",
+            dateModified:"2018-03-08",
             showShare:false,
             showFeedback:false
         })
@@ -157,7 +157,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/drugProductAppEXT-fr_20180212_0927.min.js"></script>
+<script src="app/scripts/drugProductAppEXT-fr_20180308_1045.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
