RT form update - bug fix

--- a/index.html
+++ b/index.html
@@ -153,16 +153,16 @@
                 <h2>CSP Form</h2>
             </div>
             <div class="row">
-                <a href="./csp-cps/certificate-supplementary-protection-form.html">CSP Form English-External (Sept 5)</a>
+                <a href="./csp-cps/certificate-supplementary-protection-form.html">CSP Form English-External (Sept 5, 2017)</a>
             </div>
             <div class="row">
-                <a href="./csp-cps/certificate-supplementary-protection-form-internal.html">CSP Form English-Internal (Sept 5)</a>
+                <a href="./csp-cps/certificate-supplementary-protection-form-internal.html">CSP Form English-Internal (Sept 5, 2017)</a>
             </div>
             <div class="row">
-                <a href="./csp-cps/formulaire-certificat-protection-supplementaire.html">CSP Form French-External (Sept 5)</a>
+                <a href="./csp-cps/formulaire-certificat-protection-supplementaire.html">CSP Form French-External (Sept 5, 2017)</a>
             </div>
             <div class="row">
-                <a href="./csp-cps/formulaire-certificat-protection-supplementaire-internal.html">CSP Form French-Internal (Sept 5)</a>
+                <a href="./csp-cps/formulaire-certificat-protection-supplementaire-internal.html">CSP Form French-Internal (Sept 5, 2017)</a>
             </div>
         </div>
 
@@ -171,16 +171,16 @@
                 <h2> External User Links</h2>
             </div>
             <div class="row">
-                <a href="./company/companyEXT-en.html">Company Enrolment -External (Dec 1)</a>
+                <a href="./company/companyEXT-en.html">Company Enrolment -External (Dec 1, 2017)</a>
             </div>
             <div class="row">
-                <a href="./transaction/transactionEXT-en.html">Transaction Enrolment -External (Feb 19 /2018)</a>
+                <a href="./transaction/transactionEXT-en.html">Transaction Enrolment -External (Feb 19, 2018)</a>
             </div>
             <div class="row">
-                <a href="./activity/activityEXT-en.html">Activity Enrolment -External (July 26)</a>
+                <a href="./activity/activityEXT-en.html">Activity Enrolment -External (July 26, 2018)</a>
             </div>
             <div class="row">
-                <a href="./dossier/dossierEXT-en.html">Dossier Enrolment External (Dec 6)</a>
+                <a href="./dossier/dossierEXT-en.html">Dossier Enrolment External (Dec 6, 2017)</a>
             </div>
         </div>
         <div>
@@ -188,14 +188,14 @@
                 <h2>Internal User (i.e. HPFB) Links</h2>
             </div>
             <div class="row">
-                <a href="./company/companyINT-en.html">Company Enrolment -Internal (Nov 3)</a>
+                <a href="./company/companyINT-en.html">Company Enrolment -Internal (Nov 3, 2017)</a>
             </div>
 
             <div class="row">
-                <a href="./activity/activityINT-en.html">Activity Enrolment -Internal (July 26)</a>
+                <a href="./activity/activityINT-en.html">Activity Enrolment -Internal (June 18, 2018)</a>
             </div>
             <div class="row">
-                <a href="./dossier/dossierINT-en.html">Dossier Enrolment Internal (Dec 6)</a>
+                <a href="./dossier/dossierINT-en.html">Dossier Enrolment Internal (Dec 6, 2017)</a>
             </div>
         </div>
     </div>
@@ -203,7 +203,7 @@
 
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <dl id="wb-dtmd">
-            <dt>Date modified: Dec 6, 2017</dt>
+            <dt>Date modified: June 18, 2018</dt>
         </dl>
     </div>
     </div>
