--- a/activity/activityINT-fr.html
+++ b/activity/activityINT-fr.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html><!--[if lt IE 9]>
-<html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
-<html class="no-js" lang="en" dir="ltr">
+<html class="no-js lt-ie9" lang="fr" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
+<html class="no-js" lang="fr" dir="ltr">
 <!--<![endif]-->
 <head>
-
-    <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/rn/cdts/compiled/wet-en.js"></script>
+    <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/rn/cdts/compiled/wet-fr.js"></script>
     <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/rn/cdts/compiled/soyutils.js"></script>
     <script type="text/javascript">
         document.write(wet.builder.refTop({
@@ -14,18 +13,19 @@
 
     <noscript>
         <!-- /ROOT/cdts/static/top-en.html-->
-        <!-- #include virtual="/cdts/static/top-en.html"-->
+        <!-- #include virtual="/cdts/static/top-fr.html"-->
     </noscript>
+
     <meta charset="utf-8">
     <!--No cache-->
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
     <meta http-equiv="Pragma" content="no-cache"/>
     <meta http-equiv="Expires" content="-1"/>
-    <title>Health Canada Activity REP Template</title>
+
+    <title>fr_Health Canada Activity REP Template</title>
     <meta content="width=device-width,initial-scale=1" name="viewport">
     <!-- Meta data -->
-    <meta name="description"
-          content="REP Forms">
+    <meta name="description" content="REP Forms">
     <!-- Meta data-->
     <!--[if gte IE 9 | !IE ]><!-->
     <link href="./../GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon">
@@ -37,18 +37,13 @@
     <link rel="stylesheet" href="./../GCWeb/css/ie8-theme.min.css"/>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="./../wet-boew/js/ie8-wet-boew.min.js"></script>
-
-
-    <noscript>
-    </noscript>
-
     <![endif]-->
     <!--[if lte IE 9]>
 
 
     <![endif]-->
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-
+    <!--<link rel="stylesheet" href="./app/styles/rep.css ">-->
     <!-- inject:css -->
     <link rel="stylesheet" href="app/styles/rep.css">
     <link rel="stylesheet" href="app/styles/select.min.css">
@@ -78,42 +73,43 @@
 <!-- End Google Tag Manager -->
 <ul id="wb-tphp">
     <li class="wb-slc">
-        <a class="wb-sl" href="#wb-cont">Skip to main content</a>
+        <a class="wb-sl" href="#wb-cont">Passer au contenu principal</a>
     </li>
     <li class="wb-slc visible-sm visible-md visible-lg">
-        <a class="wb-sl" href="#wb-info">Skip to "About this site"</a>
+        <a class="wb-sl" href="#wb-info">Passer à «&#160;À propos de ce site&#160;»</a>
     </li>
 </ul>
-
 <div id="def-top">
 </div>
 <script type="text/javascript">
     var defTop=document.getElementById("def-top");
     defTop.outerHTML=wet.builder.top({
         cdnEnv:"prod",
-        breadcrumbs: [{title: "Home", href: "https://lam-dev.hres.ca/REP-Form-Internal/index.html"}]
+        breadcrumbs: [{title: "Accueil", href: "https://lam-dev.hres.ca/REP-Form-Internal/index-fr.html"}],
+        lngLinks:[{
+            lang:"en",
+            href:"",
+            text:"English"
+        }]
     })
 </script>
 <main role="main" property="mainContentOfPage" class="container">
 
     <!--content starts here -->
     <div>
-        <h1 property="name" id="wb-cont">Regulatory Activity Template: Regulatory Enrolment Process (REP)</h1>
+        <h1 property="name" id="wb-cont">fr_Regulatory Activity Template: Regulatory Enrolment Process (REP)</h1>
         <noscript>
-            <h2>JavaScript is required to complete this form</h2>
+            <h2>JavaScript doit être activé pour remplir ce formulaire</h2>
         </noscript>
-
         <!-- inject:mainContent-->
         <div id="app-root" ng-app="activityApp" ng-controller="MainController as ctrl">
     <cmp-activity-main form-type="{{ctrl.formType}}"></cmp-activity-main>
 </div>
         <!-- endinject-->
 
-
     </div>
     <!--content ends here -->
     <div id="def-preFooter">
-
     </div>
     <script type="text/javascript">
         var defPreFooter=document.getElementById("def-preFooter");
@@ -124,7 +120,6 @@
             showFeedback:false
         })
     </script>
-
 </main>
 <div id="def-footer">
 
@@ -135,9 +130,6 @@
         cdnEnv:"prod"
     })
 </script>
-
-
-
 <!--[if gte IE 9 | !IE ]><!-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
 <script src="./../wet-boew/js/wet-boew.min.js"></script>
@@ -147,6 +139,7 @@
 
 <![endif]-->
 <script src="./../GCWeb/js/theme.min.js"></script>
+
 <!--Start add custom scripts here-->
 
 <!-- inject:js -->
@@ -163,7 +156,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/activityAppINT-en_20180618_1428.min.js"></script>
+<script src="app/scripts/activityAppINT-fr_20180618_1428.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
@@ -181,7 +174,6 @@
 <script src="app/lib/xml2json.js"></script>
 
 <!-- endinject -->
-
 
 </body>
 </html>
