--- a/index.html
+++ b/index.html
@@ -154,14 +154,14 @@
                 <h2>Internal User (i.e. HPFB) Links</h2>
             </div>
             <div class="row">
-                <a href="./company/companyINT-en.html">Company Enrolment -Internal (Deployed December 14) </a>
+                <a href="./company/companyINT-en.html">Company Enrolment -Internal (Deployed December 14, 2017) </a>
             </div>
 
             <div class="row">
-                <a href="./activity/activityINT-en.html">Activity Enrolment -Internal (Deployed July 27)</a>
+                <a href="./activity/activityINT-en.html">Activity Enrolment -Internal (Deployed June 18, 2018)</a>
             </div>
             <div class="row">
-                <a href="./dossier/dossierINT-en.html">Dossier Enrolment Internal (Deployed December 14)</a>
+                <a href="./dossier/dossierINT-en.html">Dossier Enrolment Internal (Deployed December 14, 2017)</a>
             </div>
         </div>
     </div>
@@ -185,7 +185,7 @@
 
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <dl id="wb-dtmd">
-            <dt>Date modified: December 14, 2017</dt>
+            <dt>Date modified: June 18, 2018</dt>
         </dl>
     </div>
     </div>
