--- a/index.html
+++ b/index.html
@@ -150,7 +150,25 @@
 
         <div>
             <div class="row">
-                <h2>CSP Form</h2>
+                <h2>New CSP Form (Start to use on September 2018)</h2>
+            </div>
+            <div class="row">
+                <a href="./csp-cps-new/certificate-supplementary-protection-form.html">CSP Form English-External (Sept 5, 2017)</a>
+            </div>
+            <div class="row">
+                <a href="./csp-cps-new/certificate-supplementary-protection-form-internal.html">CSP Form English-Internal (Sept 5, 2017)</a>
+            </div>
+            <div class="row">
+                <a href="./csp-cps-new/formulaire-certificat-protection-supplementaire.html">CSP Form French-External (Sept 5, 2017)</a>
+            </div>
+            <div class="row">
+                <a href="./csp-cps-new/formulaire-certificat-protection-supplementaire-internal.html">CSP Form French-Internal (Sept 5, 2017)</a>
+            </div>
+        </div>
+
+        <div>
+            <div class="row">
+                <h2>Old CSP Form</h2>
             </div>
             <div class="row">
                 <a href="./csp-cps/certificate-supplementary-protection-form.html">CSP Form English-External (Sept 5, 2017)</a>
