CSP form update - web standard update

--- a/csp-cps-new/formulaire-certificat-protection-supplementaire.html
+++ b/csp-cps-new/formulaire-certificat-protection-supplementaire.html
@@ -12,9 +12,17 @@
     </script>
 
     <noscript>
-        <!-- /ROOT/cdts/static/top-en.html-->
+        <!--Write closure fall-back static file -->
+        <!-- /ROOT/cdts/static/top-fr.html-->
+        <!-- /ROOT/etc/designs/canada/cdts/gcweb/v4_0_27/cdts/static/transactTop-fr.html-->
+        <!-- #include virtual="/etc/designs/canada/cdts/gcweb/v4_0_27/cdts/static/transactTop-fr.html"-->
         <!-- #include virtual="/cdts/static/top-fr.html"-->
     </noscript>
+    <!--Write closure template -->
+    <script type="text/javascript">
+        document.write(wet.builder.splashTop({
+        }));
+    </script>
 
     <meta charset="utf-8">
     <!--No cache-->
@@ -118,13 +126,13 @@
         defPreFooter.outerHTML=wet.builder.preFooter({
             cdnEnv:"prod",
             dateModified:"2018-08-20",
-            showShare:false,
-            showFeedback:false
+            showShare:true,
+            showFeedback:true
         })
     </script>
 </main>
-<div id="def-footer">
-
+<div id="def-footer">   <!--Write closure fall-back static file -->
+    <!-- #include virtual="/cdts/static/footer-fr.html"-->
 </div>
 <script type="text/javascript">
     var defFooter=document.getElementById("def-footer");
@@ -158,7 +166,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/cspAppEXT-fr_20180820_1301.min.js"></script>
+<script src="app/scripts/cspAppEXT-fr_20180820_1626.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
