--- a/csp-cps-new/formulaire-certificat-protection-supplementaire.html
+++ b/csp-cps-new/formulaire-certificat-protection-supplementaire.html
@@ -25,7 +25,7 @@
     <meta http-equiv="Pragma" content="no-cache"/>
     <meta http-equiv="Expires" content="-1"/>
 
-    <title>Formulaire CPS de Santé Canada</title>
+    <title>Formulaire de la demande de certificat de protection supplémentaire de Santé Canada</title>
     <meta content="width=device-width,initial-scale=1" name="viewport">
     <!-- Meta data -->
     <meta name="description" content="REP Forms">
@@ -120,7 +120,7 @@
         var defPreFooter=document.getElementById("def-preFooter");
         defPreFooter.outerHTML=wet.builder.preFooter({
             cdnEnv:"prod",
-            dateModified:"2018-08-24",
+            dateModified:"2018-08-29",
             showShare:true,
             showFeedback:true
         })
@@ -161,7 +161,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/cspAppEXT-fr_20180824_1407.min.js"></script>
+<script src="app/scripts/cspAppEXT-fr_20180829_1040.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
