--- a/index.html
+++ b/index.html
@@ -171,7 +171,15 @@
         </div>
         <div>
             <div class="row">
-                <h2>Internal User (i.e. HPFB) Links</h2>
+                <h2>New Internal Form</h2>
+            </div>
+            <div class="row">
+                <a href="./certificate/certificate-supplementary-protection-form-internal.html">Certificate of Supplementary Protection -Internal (August 27, 2018) </a>
+            </div>
+        </div>
+        <div>
+            <div class="row">
+                <h2>Old Internal Form</h2>
             </div>
             <div class="row">
                 <a href="./csp-cps/certificate-supplementary-protection-form-internal.html">Certificate of Supplementary Protection -Internal (Sept 25, 2017) </a>
