mds company forms - external and internal

--- a/mds_index.html
+++ b/mds_index.html
@@ -155,7 +155,7 @@
                         <h2> External User Links</h2>
                     </div>
                     <div class="row">
-                        <a href="./mds/company/en/company.html">Company Enrolment -External (Sept 10, 2019)</a>
+                        <a href="./mds/company/en/index.html">Company Enrolment -External (Sept 10, 2019)</a>
                     </div>
                     <div class="row">
                         <a href="./mds/dossier/en/index.html">Dossier Enrolment -External (Oct 05, 2018)</a>
@@ -175,7 +175,7 @@
                         <h2>Internal User (i.e. HPFB) Links</h2>
                     </div>
                     <div class="row">
-                        <a href="./mds/internal/company/en/company_internal.html">Company Enrolment -Internal (Sept 18, 2018) </a>
+                        <a href="./mds/internal/company/en/index_internal.html">Company Enrolment -Internal (Sept 18, 2018) </a>
                     </div>
                     <div class="row">
                         <a href="./mds/internal/dossier/en/index_internal.html">Dossier Enrolment Internal (Oct 05, 2018)</a>
