--- a/mds/company/en/index.html
+++ b/mds/company/en/index.html
@@ -31,7 +31,7 @@
             href:"<!--build:langHtml--><!--endbuild-->",
             text:"Français"
         }]*/
-    })</script><main role="main" property="mainContentOfPage" class="container"><!--content starts here --><div><!--  <h1 property="name" id="wb-cont">&lt;!&ndash;build:mainHeading&ndash;&gt;&lt;!&ndash;endbuild&ndash;&gt;</h1>--><noscript><h2>JavaScript is required to complete this form</h2></noscript><app-root isInternal="yes"></app-root><!-- inject:mainContent--json>
+    })</script><main role="main" property="mainContentOfPage" class="container"><!--content starts here --><div><!--  <h1 property="name" id="wb-cont">&lt;!&ndash;build:mainHeading&ndash;&gt;&lt;!&ndash;endbuild&ndash;&gt;</h1>--><noscript><h2>JavaScript is required to complete this form</h2></noscript><app-root isInternal="no"></app-root><!-- inject:mainContent--json>
         <!-- endinject--></div><!--content ends here --><div id="def-preFooter"></div><script type="text/javascript">var defPreFooter=document.getElementById("def-preFooter");
         defPreFooter.outerHTML=wet.builder.preFooter({
             cdnEnv:"prod",
@@ -44,4 +44,4 @@
     })</script><!--[if gte IE 9 | !IE ]><!--><script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.js"></script><script src="./wet-boew/js/wet-boew.min.js"></script><!--<![endif]--><!--[if lt IE 9]>
 <script src="./wet-boew/js/ie8-wet-boew2.min.js"></script>
 
-<![endif]--><script src="./GCWeb/js/theme.min.js"></script><!--Start add custom scripts here--><script src="./assets/lib/xml2json.js"></script><!-- inject:js --><!-- endinject --><!-- thirdParty:js  --><!-- endinject --><script type="text/javascript" src="inline.553bda1343e7dba398ea.bundle.js"></script><script type="text/javascript" src="polyfills.0fb3600b41785b357f65.bundle.js"></script><script type="text/javascript" src="main.9881c6c8c3879fdfc62e.bundle.js"></script></body></html>
+<![endif]--><script src="./GCWeb/js/theme.min.js"></script><!--Start add custom scripts here--><script src="./assets/lib/xml2json.js"></script><!-- inject:js --><!-- endinject --><!-- thirdParty:js  --><!-- endinject --><script type="text/javascript" src="inline.07f80ab4aeccebbe7efc.bundle.js"></script><script type="text/javascript" src="polyfills.0fb3600b41785b357f65.bundle.js"></script><script type="text/javascript" src="main.7200b0dc9c526be61e30.bundle.js"></script></body></html>
