pharma/bio form pilot Production release - diff form

--- a/index.html
+++ b/index.html
@@ -154,14 +154,17 @@
                 <h2>Internal User (i.e. HPFB) Links</h2>
             </div>
             <div class="row">
-                <a href="./company/companyINT-en.html">Company Enrolment -Internal (Deployed December 14, 2017) </a>
+                <a href="./company/companyINT-en.html">Company Enrolment - Internal (Deployed October 30, 2018) </a>
             </div>
 
             <div class="row">
-                <a href="./activity/activityINT-en.html">Activity Enrolment -Internal (Deployed June 18, 2018)</a>
+                <a href="./activity/activityINT-en.html">Activity Enrolment - Internal (Deployed June 18, 2018)</a>
             </div>
             <div class="row">
-                <a href="./dossier/dossierINT-en.html">Dossier Enrolment Internal (Deployed December 14, 2017)</a>
+                <a href="./dossier/dossierINT-en.html">Dossier Enrolment - Internal (Deployed October 30, 2018)</a>
+            </div>
+            <div class="row">
+                <a href="./repDiff/diffForm-en.html">Comparison tool  (Deployed October 30, 2018)</a>
             </div>
         </div>
     </div>
@@ -193,7 +196,7 @@
 
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <dl id="wb-dtmd">
-            <dt>Date modified: June 18, 2018</dt>
+            <dt>Date modified: October 30, 2018</dt>
         </dl>
     </div>
     </div>
