Pharma/bio Production release - remove RA web link from index page

--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
                 <a href="./company/companyINT-en.html">Company Enrolment - Internal (Deployed October 30, 2018) </a>
             </div>
 
-            <div class="row">
-                <a href="./activity/activityINT-en.html">Activity Enrolment - Internal (Deployed June 18, 2018)</a>
-            </div>
+            <!--<div class="row">-->
+                <!--<a href="./activity/activityINT-en.html">Activity Enrolment - Internal (Deployed June 18, 2018)</a>-->
+            <!--</div>-->
             <div class="row">
                 <a href="./dossier/dossierINT-en.html">Dossier Enrolment - Internal (Deployed October 30, 2018)</a>
             </div>
