--- a/mds_index.html
+++ b/mds_index.html
@@ -28,7 +28,7 @@
 
     <![endif]-->
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-    <link rel="stylesheet" href="./app/styles/rep.css ">
+    <!--<link rel="stylesheet" href="./app/styles/rep.css ">-->
     <noscript>
         <link rel="stylesheet" href="./wet-boew/css/noscript.min.css"/>
     </noscript>
