test cdts html content

--- a/dossier/dossierEXT-fr.html
+++ b/dossier/dossierEXT-fr.html
@@ -13,7 +13,7 @@
 
     <noscript>
         <!-- /ROOT/cdts/static/top-en.html-->
-        <!-- #include virtual="/cdts/static/top-fr.html"-->
+        <!--# include file="/cdts/static/top-fr.html"-->
     </noscript>
 
     <meta charset="utf-8">
