--- a/mdi/index_mdi.html
+++ b/mdi/index_mdi.html
@@ -244,7 +244,7 @@
 <script src="GCWeb/js/theme.min.js"></script>
 <!--PROJECT REFERENCES-->
 <script type="text/javascript"  src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 <script type="text/javascript" src="proj_dep/vendor/require.js"></script>
 <script type="text/javascript" src="proj_dep/js/globals.js"></script>
 <script type="text/javascript" src="proj_dep/js/index_mdi.js"></script>
