put stylesheets link to download

--- a/index.html
+++ b/index.html
@@ -194,14 +194,18 @@
                     <div class="row">
                         <a href="./dossier/dossierINT-en.html">Dossier Enrolment Internal (Oct 02, 2018)</a>
                     </div>
-                </div>
-
-                <div>
-
                     <div class="row">
                         <a href="./repDiff/diffForm-en.html">Difference Engine (Oct 02, 2018)</a>
                     </div>
+                </div>
 
+                <div>
+                    <div class="row">
+                        <h2>Stylesheet Download Link</h2>
+                    </div>
+                    <div class="row">
+                        <a href="./stylesheet/pharmabio_stylesheets_2_0.zip">Download stylesheet zip file (Feb 07, 2019) </a>
+                    </div>
                 </div>
 
             </div>
