update link titles

--- a/mds_index.html
+++ b/mds_index.html
@@ -161,10 +161,10 @@
                         <a href="./mds/dossier/en/index.html">Dossier Enrolment</a>
                     </div>
                     <div class="row">
-                        <a href="./mds/applicationInfo/en/index.html">Application Information Enrolment</a>
+                        <a href="./mds/applicationInfo/en/index.html">Application Information</a>
                     </div>
                     <div class="row">
-                        <a href="./mds/transaction/en/index.html">Transaction Enrolment</a>
+                        <a href="./mds/transaction/en/index.html">Regulatory Transaction</a>
                     </div>
                 </div>
             </div>
