move activity form to before_wcag folder, and hide cost recovery RT form on DEV

--- a/before_wcag_index.html
+++ b/before_wcag_index.html
@@ -168,8 +168,11 @@
                         <a href="./drugProduct/drugProductEXT-en.html">Product Information Template - External (version:2.2.0, Mar 29, 2019)</a>
                     </div>
                     <div class="row">
-                        <a href="./transactionCostRecovery/transactionEXT-en.html">Regulatory Transaction Template – External COST RECOVERY - External (Feb 25, 2019)</a>
+                        <a href="./activity/activityEXT-en.html">Activity Enrolment - External (Apr 12, 2018)</a>
                     </div>
+                    <!--<div class="row">-->
+                        <!--<a href="./transactionCostRecovery/transactionEXT-en.html">Regulatory Transaction Template – External COST RECOVERY - External (Feb 25, 2019)</a>-->
+                    <!--</div>-->
                 </div>
                 <div>
                     <div class="row">
@@ -178,9 +181,11 @@
                     <div class="row">
                         <a href="./company/companyINT-en.html">Company Enrolment -Internal (version:2.2.0, Mar 29, 2019) </a>
                     </div>
-
                     <div class="row">
                         <a href="./dossier/dossierINT-en.html">Dossier Enrolment Internal (version:2.2.0, Mar 29, 2019)</a>
+                    </div>
+                    <div class="row">
+                        <a href="./activity/activityINT-en.html">Activity Enrolment -Internal (Apr 12, 2018)</a>
                     </div>
                     <div class="row">
                         <a href="./repDiff/diffForm-en.html">Difference Engine (Oct 02, 2018)</a>
