--- a/index.html
+++ b/index.html
@@ -171,17 +171,14 @@
                         <a href="./wet4027/transaction/transactionEXT-en.html#main">Regulatory Transaction Template - External (Apr 29, 2019, v2.2.1)</a>
                     </div>
                     <div class="row">
-                        <a href="./activity/activityEXT-en.html">Activity Enrolment - External (Apr 12, 2018)</a>
-                    </div>
-                    <div class="row">
                         <a href="./wet4027/dossier/dossierEXT-en.html#main">Dossier Enrolment - External (Apr 29, 2019, v2.2.1)</a>
                     </div>
                     <div class="row">
                         <a href="./wet4027/drugProduct/drugProductEXT-en.html#main">Product Information Template - External (Apr 29, 2019, v2.2.1)</a>
                     </div>
-                    <div class="row">
-                        <a href="./wet4027/transactionCostRecovery/transactionEXT-en.html#main">Regulatory Transaction Template – COST RECOVERY - External (Mar 18, 2019)</a>
-                    </div>
+                    <!--<div class="row">-->
+                        <!--<a href="./wet4027/transactionCostRecovery/transactionEXT-en.html#main">Regulatory Transaction Template – COST RECOVERY - External (Mar 18, 2019)</a>-->
+                    <!--</div>-->
                 </div>
                 <div>
                     <div class="row">
@@ -189,10 +186,6 @@
                     </div>
                     <div class="row">
                         <a href="./wet4027/company/companyINT-en.html#main">Company Enrolment -Internal (Apr 29, 2019, v2.2.1) </a>
-                    </div>
-
-                    <div class="row">
-                        <a href="./activity/activityINT-en.html">Activity Enrolment -Internal (Apr 12, 2018)</a>
                     </div>
                     <div class="row">
                         <a href="./wet4027/dossier/dossierINT-en.html#main">Dossier Enrolment Internal (Apr 29, 2019, v2.2.1)</a>
