break test for CSP header settings - required by team lead, Elizabeth George

--- a/index-fr.html
+++ b/index-fr.html
@@ -22,7 +22,6 @@
     <link rel="stylesheet" href="./GCWeb/css/ie8-theme.min.css"/>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="./wet-boew/js/ie8-wet-boew.min.js"></script>
-    <script src="https://food-guide.canada.ca/wet-boew/js/deps/jquery.magnific-popup.min.js"></script>
     <![endif]-->
     <!--[if lte IE 9]>
 
@@ -36,6 +35,8 @@
     <!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
     <script>dataLayer1 = [];</script>
     <!-- End Google Tag Manager -->
+    <script src="./wet-boew/js/deps/jquery.magnific-popup.min.js"></script>
+    <script src="https://food-guide.canada.ca/wet-boew/js/deps/jquery.magnific-popup.min.js"></script>
 </head>
 <body vocab="http://schema.org/" typeof="WebPage">
 <!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
